--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
   "dependencies": {
     "@highcharts/dashboards": "^4.0.0",
     "@highcharts/grid-lite": "^2.1.1",
+    "@types/jspdf": "^1.3.3",
+    "@types/xlsx": "^0.0.35",
     "clsx": "^2.1.1",
     "echarts": "^6.0.0",
     "echarts-for-react": "^3.0.5",
     "highcharts": "^11.4.8",
     "highcharts-react-official": "^3.2.3",
+    "jspdf": "^3.0.4",
+    "jspdf-autotable": "^5.0.2",
     "next": "16.0.10",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
