--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "echarts-for-react": "^3.0.5",
     "highcharts": "^11.4.8",
     "highcharts-react-official": "^3.2.3",
+    "html2canvas-pro": "^1.6.4",
+    "html2pdf.js": "^0.14.0",
+    "jspdf": "^4.0.0",
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1",
-    "react-icons": "^5.5.0"
+    "react-icons": "^5.5.0",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
