Add comprehensive API documentation and demo script for enterprise reporting features, including new API endpoints for customer, financial, geographic, marketing, operations, orders, performance, products, sales, and live sales data. Enhance chart components with loading states and improve theme management. Introduce utility hooks for dashboard data fetching and PDF export functionality.

--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "echarts-for-react": "^3.0.5",
     "highcharts": "^11.4.8",
     "highcharts-react-official": "^3.2.3",
+    "html2canvas-pro": "^1.6.3",
     "jspdf": "^3.0.4",
     "jspdf-autotable": "^5.0.2",
     "next": "16.0.10",
